--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "devServer": {
+    "allowedHosts": ["all"]
+}
 }
