--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.1.0",
+    "@google-cloud/storage": "^7.1.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
