--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
   }
