--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/aiplatform": "^3.1.0",
+    "@google-cloud/automl": "^4.0.1",
     "@google-cloud/storage": "^7.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
