--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:9000",
   "dependencies": {
+    "@tensorflow/tfjs-automl": "^1.3.0",
+    "@tensorflow/tfjs-node": "^4.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
